samples/_failures_safe/1761493509_bac08a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e76b997.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_5e76b997.c:144: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_5e76b997.c:143:21: error: expected declaration or statement at end of input
  143 |                     return NULL
      |                     ^~~~~~
./samples/SAFE/__tmp_5e76b997.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e76b997.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e76b997.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e76b997.c:143:21: error: expected declaration or statement at end of input
